--- a/index.html
+++ b/index.html
@@ -45,6 +45,27 @@
 
   </section>
 
+  <section class="course">
+    <h1>Course We Offer</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, sit!</p>
+
+    <div class="row">
+      <div class="course-col">
+        <h3>Intermediate</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos similique ullam quas rerum, voluptatibus numquam quidem, expedita aliquid minima eaque sit tempora debitis deserunt, et esse? Iusto, exercitationem omnis.</p>
+      </div>
+      <div class="course-col">
+        <h3>Degree</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos similique ullam quas rerum, voluptatibus numquam quidem, expedita aliquid minima eaque sit tempora debitis deserunt, et esse? Iusto, exercitationem omnis.</p>
+      </div>
+      <div class="course-col">
+        <h3>Post Graduation</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos similique ullam quas rerum, voluptatibus numquam quidem, expedita aliquid minima eaque sit tempora debitis deserunt, et esse? Iusto, exercitationem omnis.</p>
+      </div>
+    </div>
+
+  </section>
+
   <script src="script.js"></script>
 </body>
 
