--- a/index.html
+++ b/index.html
@@ -66,6 +66,32 @@
 
   </section>
 
+  <section class="campus">
+    <h1>Our Global Campus</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, minima?</p>
+
+    <div class="row">
+      <div class="campus-col">
+        <img src="./img/london.png" alt="london">
+        <div class="layer">
+          <h3>LONDON</h3>
+        </div>
+      </div>
+      <div class="campus-col">
+        <img src="./img/newyork.png" alt="london">
+        <div class="layer">
+          <h3>NEW YORK</h3>
+        </div>
+      </div>
+      <div class="campus-col">
+        <img src="./img/washington.png" alt="london">
+        <div class="layer">
+          <h3>WASHINGTON</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 
