--- a/index.html
+++ b/index.html
@@ -92,6 +92,32 @@
     </div>
   </section>
 
+  <section class="facilities">
+    <h1>Our facilities</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, iste.</p>
+
+    <div class="row">
+      <div class="facilities-col">
+        <img src="./img/library.png" alt="library">
+        <h3>World Class Library</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, cum?
+        </p>
+      </div>
+      <div class="facilities-col">
+        <img src="./img/basketball.png" alt="basketball">
+        <h3>Largest Play Ground</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, cum?
+        </p>
+      </div>
+      <div class="facilities-col">
+        <img src="./img/cafeteria.png" alt="cafeteria">
+        <h3>Tasty and Healthy</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, cum?
+        </p>
+      </div>
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 
