--- a/index.html
+++ b/index.html
@@ -118,6 +118,51 @@
     </div>
   </section>
 
+  <section class="testimonials">
+    <h1>What Our Student Says</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+    <div class="row">
+      <div class="testimonial-col">
+        <img src="/img/user1.jpg" alt="">
+        <div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, error quas autem laborum fugiat voluptates optio nulla quisquam asperiores veniam.</p>
+          <h3>Christiane Berley</h3>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+
+        </div>
+
+
+
+      </div>
+      <div class="testimonial-col">
+        <img src="/img/user2.jpg" alt="">
+        <div>
+
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, error quas autem laborum fugiat voluptates optio nulla quisquam asperiores veniam.</p>
+          <h3>David Byer</h3>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star-half-stroke"></i>
+          <i class="fa-regular fa-star"></i>
+
+
+        </div>
+
+
+
+      </div>
+    </div>
+  </section>
+
+
+
+
   <script src="script.js"></script>
 </body>
 
