--- a/index.html
+++ b/index.html
@@ -151,13 +151,28 @@
           <i class="fa-solid fa-star-half-stroke"></i>
           <i class="fa-regular fa-star"></i>
 
-
         </div>
-
-
-
       </div>
     </div>
+  </section>
+
+  <section class="cta">
+    <h1>Enroll for our various courses <br>anywhere form the world</h1>
+    <a class="hero-btn" href="">CONTACT US</a>
+  </section>
+
+
+  <section class="footer">
+    <h4>About Us</h4>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem voluptates placeat consequuntur?<br> Et non nisi sit asperiores delectus similique velit quasi<br> blanditiis dolorum perferendis molestias, exercitationem, assumenda illum voluptas ex!
+    </p>
+    <div class="icons">
+      <i class="fa fa-facebook"></i>
+      <i class="fa fa-linkedin"></i>
+      <i class="fa fa-instagram"></i>
+      <i class="fa fa-github"></i>
+    </div>
+    <p>Made with <i class="fa fa-heart-o"></i> By Victor Hugo</p>
   </section>
 
 
