--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem voluptates placeat consequuntur?<br> Et non nisi sit asperiores delectus similique velit quasi<br> blanditiis dolorum perferendis molestias, exercitationem, assumenda illum voluptas ex!
     </p>
     <div class="icons">
-      <i class="fa fa-facebook"></i>
-      <i class="fa fa-linkedin"></i>
-      <i class="fa fa-instagram"></i>
-      <i class="fa fa-github"></i>
+      <a href="https://www.facebook.com/Victtor.HuugoOo/" target="_blank"><i class="fa fa-facebook"></i></a>
+      <a href="https://www.linkedin.com/in/victor-hugodev/" target="_blank"><i class="fa fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/torugo_devjs/" target="_blank"> <i class="fa fa-instagram"></i></a>
+      <a href="https://github.com/TorugoJS" target="_blank"> <i class="fa fa-github"></i></a>
     </div>
     <p>Made with <i class="fa fa-heart-o"></i> By Victor Hugo</p>
   </section>
