--- a/blog.html
+++ b/blog.html
@@ -37,53 +37,52 @@
       <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
 
-    <h1>Our Courses</h1>
+    <h1>Blog</h1>
   </section>
 
-  <section class="course">
-    <h1>Course We Offer</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, sit!</p>
-
+  <section class="blog-content">
     <div class="row">
-      <div class="course-col">
-        <h3>Intermediate</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos similique ullam quas rerum, voluptatibus numquam quidem, expedita aliquid minima eaque sit tempora debitis deserunt, et esse? Iusto, exercitationem omnis.</p>
+      <div class="blog-left">
+        <img src="./img/certificate.jpg" alt="">
+        <h2>Blog certificate</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, consequuntur earum. Et, id. Aspernatur ex laudantium amet magni asperiores similique.</p><br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi at et assumenda?</p>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, odit commodi consectetur, nam suscipit sed repellendus ab, reprehenderit dolorum corporis numquam ea! Dolorem nostrum ut amet voluptas optio, distinctio tempore!</p><br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, odit commodi consectetur, nam suscipit sed repellendus ab, reprehenderit dolorum corporis numquam ea! Dolorem nostrum ut amet voluptas optio, distinctio tempore!odit commodi consectetur, nam suscipit sed repellendus ab, reprehenderit dolorum corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, odit commodi consectetur.</p>
+
+
+        <div class="comment-box">
+          <h3>Leave a comment</h3>
+          <form class="comment-form">
+            <input type="text" placeholder="Enter Name">
+            <input type="email" placeholder="Enter Email">
+            <textarea rows="5" placeholder="Your comment"></textarea>
+            <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
+          </form>
+        </div>
       </div>
-      <div class="course-col">
-        <h3>Degree</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos similique ullam quas rerum, voluptatibus numquam quidem, expedita aliquid minima eaque sit tempora debitis deserunt, et esse? Iusto, exercitationem omnis.</p>
-      </div>
-      <div class="course-col">
-        <h3>Post Graduation</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos similique ullam quas rerum, voluptatibus numquam quidem, expedita aliquid minima eaque sit tempora debitis deserunt, et esse? Iusto, exercitationem omnis.</p>
+      <div class="blog-right">
+        <h3>Post Categories</h3>
+        <div>
+          <span>Business Analystics</span>
+          <span>28</span>
+        </div>
+
+        <div>
+          <span>Data Science</span>
+          <span>25</span>
+        </div>
+
+        <div>
+          <span>Business Analystics</span>
+          <span>21</span>
+        </div>
+
+
       </div>
     </div>
-
-  </section>
-
-  <section class="facilities">
-    <h1>Our facilities</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, iste.</p>
-
-    <div class="row">
-      <div class="facilities-col">
-        <img src="./img/library.png" alt="library">
-        <h3>World Class Library</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, cum?
-        </p>
-      </div>
-      <div class="facilities-col">
-        <img src="./img/basketball.png" alt="basketball">
-        <h3>Largest Play Ground</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, cum?
-        </p>
-      </div>
-      <div class="facilities-col">
-        <img src="./img/cafeteria.png" alt="cafeteria">
-        <h3>Tasty and Healthy</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, cum?
-        </p>
-      </div>
+    </div>
     </div>
   </section>
 
