--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
 
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Course</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Course</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
 
       </div>
@@ -40,7 +40,7 @@
     <div class="text-box">
       <h1>World's Biggest University</h1>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>Facere soluta dicta at sequi, quam ad consectetur debitis repudiandae suscipit repellendus inventore?<br> Fuga beatae pariatur sint! </p>
-      <a href="" class="hero-btn">Visit Us to Know More</a>
+      <a href="contact.html" class="hero-btn">Visit Us to Know More</a>
     </div>
 
   </section>
